[package]
name = "wplace-scraper-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.35", features = ["full"] }
rusqlite = { version = "0.30", features = ["bundled"] }
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
url = "2.4"
num_cpus = "1.16"
rand = "0.8"
chrono = "0.4"
crossterm = "0.27"
ratatui = "0.25"
rayon = "1.8"

